...
    <string name="create_password">Create Password</string>
    <string name="create_a_new_password">Create A New Password</string>
    <string name="retype_password">Re-Enter Password</string>
    <string name="create_password_criteria">Password must be at least 6 characters long and contain a letter, number and symbol</string>
    <string name="create_password_not_equal">Passwords do not match</string>
    <string name="enter_password">Enter Password</string>
    <string name="security_erase_database_warning">If you wish to reset your password and security questions, you must erase all data in the database. Information deleted this way will not be recovered.\n\n Are you sure you want to proceed?</string>
    <string name="security_code_blank">Security code is blank, please try again</string>
    <string name="security_incorrect_security_code">Incorrect security code, please try again</string>
    <string name="security_correct_security_code">Security code correct, wiping database information and login information</string>
    <string name="security_reset_information">Please enter in the security code to wipe the database information. This code can be found inside the user manual, in the "Quick Guide - Resetting Your Password" page.\n\nOnce you confirm the security code, the reset will happen immediately.\n\n</string>
    <string name="security_tag_security_code">Security Code</string>
    <string name="security_question_answers_incorrect">The answers to the security questions are incorrect, please try again</string>


    <!--    Login Security Questions Screen-->
    <string name="login_security_textview_reset">Reset Password</string>
    <string name="login_security_textview_question_one">Security Question One</string>
    <string name="login_security_textview_question_two">Security Question Two</string>
    <string name="login_security_button_forgot">Forgot Answers</string>
    

    <!-- Edit Patient Details Strings -->
    <string name="edit_patient_details_confirm">Confirm</string>
    <string name="edit_patient_details_exit">Exit</string>
    <string name="edit_patient_details_patient_updated">Patient details updated</string>
    <string name="edit_patient_details_title">Manage Patient</string>


    <!-- Settings Strings -->
...
    <string name="settings_editText_security_question_one"> Question One</string>
    <string name="settings_editText_hint_one">Ex: Your mothers maiden name</string>
    <string name="settings_editText_security_answer_one">Answer One</string>
    <string name="settings_editText_security_question_two">Question Two</string>
    <string name="settings_editText_hint_two">Ex: Your first pets name</string>
    <string name="settings_editText_security_answer_two">Answer Two</string>
    <string name="settings_button_submit">Submit</string>
    <string name="settings_toast_security_reset_successful">Security Questions set successfully</string>
    <string name="settings_toast__error_password">Please enter your current password to make any changes</string>

    <!-- Motor Skills Game -->
    <string name="motor_skills_game_score_one">Score: %1$s Round</string>
    <string name="motor_skills_game_score_multiple">Score: %1$s Rounds</string>
...
    <!--Generic Strings-->
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_body">"In regards to this app\nNeurolab by Soteria is designed as an assistant tool only. It should not be relied upon for treatment, diagnosis\n or professional medical advice. If you have any queries about its use,\nplease consult your local physician or health care provider.
        \nIn regards to personal data\nSoteria do not store any personal data you enter on external hardware, \ninformation gathered by this app will stay on the device installed. Your information, \nand control over it, is accessible only to you or your healthcare provider.
        \nYour Responsibilities\nYou must not store any information that could be considered confidential information \non this application for the purposes of identifying a patient registered on this device. Information includes but is not limited to a patient's name, age, address, phone number or birthday.
        \nBy continuing to the app, you confirm that you have read, understood and accept the above statement."</string>
    <string name="shared_preferences_filename">neurolabPrefs</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    
    <!-- Select Game Screen -->
    <string name="select_game">Select Game</string>
...
