<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_security_textview_main_title"
        style="@style/TextSubHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login_security_textview_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_security_textview_question_one_title"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/login_security_textview_question_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_security_textview_main_title" />

    <TextView
        android:id="@+id/login_security_textview_question_one"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_security_textview_question_one_title" />

    <EditText
        android:id="@+id/login_security_edittext_answer_one_input"
        style="@style/EditText"
        android:layout_width="750dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/settings_editText_security_answer_one"
        android:inputType="textPersonName"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_security_textview_question_one" />

    <TextView
        android:id="@+id/login_security_textview_question_two_title"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_security_textview_question_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.001"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_security_edittext_answer_one_input" />

    <TextView
        android:id="@+id/login_security_textview_question_two"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_security_textview_question_two_title" />

    <EditText
        android:id="@+id/login_security_edittext_answer_two_input"
        style="@style/EditText"
        android:layout_width="750dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/settings_editText_security_answer_two"
        android:inputType="textPersonName"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_security_textview_question_two" />


    <Button
        android:id="@+id/login_security_button_submit_questions"
        style="@style/TextButtonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/settings_button_submit"
        app:layout_constraintBottom_toTopOf="@+id/login_security_button_forgot_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_security_button_forgot_answers"
        style="@style/TextButtonRed"
        android:textSize="@dimen/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/login_security_button_forgot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>