...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getLastMonthSessions"
            android:text="Month" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getLastYearSessions"
            android:text="Year" />
    </LinearLayout>

...
